--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
