--- a/index.html
+++ b/index.html
@@ -44,9 +44,16 @@
 				padding-right: 10px;
 			}
 			.clearFacet:before {
-				content: '(x) ';
+				content: '(×) ';
 			}
-
+			.search-input {
+				font-size: 16px;
+			}
+			.clearQuery {
+				color: #666;
+				cursor: pointer;
+				margin-left: -20px;
+			}
 			[ng\:cloak],
 			[ng-cloak],
 			[data-ng-cloak],
@@ -64,9 +71,9 @@
 	<div ng-controller="MainCtrl">
 
 		<div class="top">
-			Search: <input name="company" type="text" class="search-input" ng-model="query"/> <a ng-if="query"
-																								 class="clearFacet"
-			ng-click="clearQuery()">{{query}}</a>
+			Search: <input name="searchQuery" type="text" class="search-input" ng-model="query"/> <a ng-if="query"
+																								 class="clearQuery"
+			ng-click="clearQuery()">&times;</a>
 		</div>
 
 		<section class="left">
