* Minor style tweaks

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
 				padding-right: 10px;
 			}
 			.clearFacet:before {
-				content: '(×) ';
+				color: #999;
+				content: '× ';
 			}
 			.search-input {
 				font-size: 16px;
+				padding-right: 20px;
 			}
 			.clearQuery {
-				color: #666;
+				color: #999;
 				cursor: pointer;
 				margin-left: -20px;
 			}
