* Fix weird formatting from PhpStorm. * Search query overrides / clears any active facets.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
 	<div ng-controller="MainCtrl">
 
 		<div class="top">
-			Search: <input name="searchQuery" type="text" class="search-input" ng-model="query"/> <a ng-if="query"
-																								 class="clearQuery"
-			ng-click="clearQuery()">&times;</a>
+			Search: <input name="searchQuery" type="text" class="search-input" ng-model="query"/><a ng-if="query" class="clearQuery" ng-click="clearQuery()">&times;</a>
 		</div>
 
 		<section class="left">
