--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 
 				<p class="wrapper-facets">
 					<a ng-if="activeFacets.length" class="clearFacet" ng-click="clearAllFacets()">Clear All</a>
-
 					<a class="clearFacet" ng-repeat="facet in activeFacets" ng-click="clearFacet(facet)">{{facet}}</a>
 				</p>
 
@@ -115,7 +114,7 @@
 
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
